snapping part completely done!

--- a/projects/math-app/_src/scss/style.scss
+++ b/projects/math-app/_src/scss/style.scss
@@ -539,6 +539,9 @@ body {
         background: blue;
       }
     }
+    &.ref {
+      background: gold;
+    }
   }
   &.highlight-0 {
     .dot {
