--- a/projects/audio-visualizer/style.css
+++ b/projects/audio-visualizer/style.css
@@ -27,13 +27,16 @@ input, button {
   width: 100%;
   height: 100%;
 }
+#canvas {
+  background: black;
+}
 
 #seekBar {
   /* background: rgba(0, 255, 0, 0.3); */
 }
 
 #progressBar {
-  background: rgba(251, 255, 0, 0.432);
+  background: rgba(255, 255, 255, 0.15);
   pointer-events: none;
   width: 0%;
 }
