--- a/projects/audio-visualizer/style.css
+++ b/projects/audio-visualizer/style.css
@@ -39,6 +39,7 @@ input, button {
   background: rgba(255, 255, 255, 0.15);
   pointer-events: none;
   width: 0%;
+  /* transition: all .3s ease; */
 }
 
 audio {
@@ -53,4 +54,12 @@ audio {
   color: wheat;
   z-index: 9;
   right: 10px;
+}
+
+#time {
+  color: white;
+  position: fixed;
+  z-index: 10;
+  right: 10px;
+  top: 30px;
 }
